fix irregular spacing in blog list

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -548,8 +548,10 @@ footer .footer-custom-content {
 .post-preview .post-image {
   float: right;
   margin-left: 0.625rem;
-  height: 12rem;
-  width: 12rem;
+  max-height: 12rem;
+  max-width: 16rem;
+  height: auto;
+  width: auto;
 }
 .post-preview .post-image {
   filter: grayscale(40%);
